<resources>
    <string name="app_name">AlmostThere</string>
    <string name="splash_app_title">거의\n다왔어</string>
    <string name="splash_touch">약속을 잡으려면 터치</string>
    <string name="past_promise">끝났어</string>
    <string name="past_promise_hint"><![CDATA[< 끝난 약속]]></string>
    <string name="future_promise">곧이야</string>
    <string name="future_promise_hint"><![CDATA[예정인 약속 >]]></string>
    <string name="join_promise">가는중</string>
    <string name="join_promise_hint"><![CDATA[< 약속 참여]]></string>
    <string name="set_promise">만날래</string>
    <string name="set_promise_hint"><![CDATA[약속 생성 >]]></string>
    <string name="promise_history">언제야</string>
    <string name="promise_history_hint"><![CDATA[< 약속 보기]]></string>
    <string name="join">약속 참여</string>
    <string name="promise_detail">약속 상세 정보</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_promise">약속 설정</string>
    <string name="hint_select_game_start_time">게임 시작 시간을 선택하세요.</string>
    <string name="hint_select_promise_date">약속 날짜를 선택하세요.</string>
    <string name="hint_select_promise_time">약속 시간을 선택하세요.</string>
    <string name="hint_select_promise_location">약속 장소를 선택하세요.</string>
    <string name="promise_location">약속 장소</string>
    <string name="promise_date">약속 날짜</string>
    <string name="promise_time">약속 시간</string>
    <string name="game_start_time">게임 시작 시간</string>
    <string name="date">%d년 %d월 %d일</string>
    <string name="time">%d시 %d분</string>
    <string name="before_time">%d시간 %d분 전</string>
    <string name="game_start">게임 시작</string>
    <string name="create">생성</string>
    <string name="hour">시간</string>
    <string name="before_minute">분 전</string>
    <string name="cancel">취소</string>
    <string name="ok">확인</string>
    <string name="search_location">목적지 찾기</string>
    <string name="promise_creation">약속 생성</string>
    <string name="promise_info">약속 정보</string>
    <string name="stubborn_shiba">산책가기 싫은 시바견</string>
    <string name="modest_shiba">그윽하게 보는 시바견</string>
    <string name="lying_shiba">누워있는 시바견</string>
    <string name="move_to_my_location">내 위치로 이동</string>
    <string name="character_img">캐릭터 이미지</string>
    <string name="promises_end">끝났어</string>
    <string name="game_result_finish">종료</string>
    <string name="gaming_hp">HP</string>
    <string name="gaming_ranking">순위</string>
    <string name="invalid_invite_code">유효하지 않은 초대 코드 입니다.</string>
    <string name="valid_invite_code">유효한 초대 코드 입니다.</string>
    <string name="label_invite_code">초대 코드 입력</string>
    <string name="hint_invite_code">영문, 숫자 조합 7자리</string>
    <string name="already_join">이미 참여중인 약속입니다.</string>
    <string name="already_started">만료된 약속입니다.</string>
</resources>